Added YOLO project

--- a/index.html
+++ b/index.html
@@ -327,6 +327,20 @@
                       </a>
                   </div>
 
+                  <div class="col-lg-4 work_item aifocus">
+                      <a href="images/works/7.jpg" class="img-zoom">
+                          <div class="work_box">
+                              <div class="work_img">
+                                  <img src="images/works/7.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                              </div>
+                              <div class="work_detail">
+                                  <p class="mb-2">AI Focus</p>
+                                  <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/projects/AI/YOLO.html">Object Detection with YOLO</a></h4>
+                              </div>
+                          </div>
+                      </a>
+                  </div>
+
 
                   </div>
             </div>
