--- a/projects/AI/YOLO.html
+++ b/projects/AI/YOLO.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Basic Feline and Canine Classifier | Freeman</title>
+        <title>Object Detection with YOLO | Freeman</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
 
@@ -78,16 +78,16 @@
         <!-- End Navbar -->
 
         <!-- START HOME -->
-        <section class="section header-bg-img-AI-1 h-100vh" id="home">
-            <div class="bg-overlay-dark"></div>
+        <section class="section header-bg-img-AI-2  h-100vh" id="home">
+            <div class="bg-overlay"></div>
             <div class="header-table">
                 <div class="header-table-center">
                     <div class="container">
                         <div class="row justify-content-center">
                             <div class="col-lg-12">
                                 <div class="text-center header-content mx-auto">
-                                    <h1 class="header-name text-white text-capitalize mb-0">Basic Feline and Canine Classifier</h1>
-                                    <p class="text-white mx-auto header-desc mt-4">Using artificial intelligence and convolutional neural networks for the binary classification of dogs and cats.</p>
+                                    <h1 class="header-name text-white text-capitalize mb-0">Object Detection with YOLO</h1>
+                                    <p class="text-white mx-auto header-desc mt-4">Using artificial intelligence with the "You Only Look Once" Object Detection algorithm to identify objects in videos </p>
                                     <div class="mt-4 pt-2">
                                         <a href="https://freeman-jiang.github.io/" class="btn btn-outline-custom btn-round">Return To Home</a>
                                     </div>
@@ -116,7 +116,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="mt-3">
-                            <img src="images/CNNs/cover.jpeg" alt="" class="img-fluid mx-auto d-block img-thumbnail">
+                            <img src="images/YOLO/2.png" alt="" class="img-fluid mx-auto d-block img-thumbnail">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -125,7 +125,7 @@
                             <!--
                             <h4 class="mt-4">Hello! <span class="text-custom font-weight-bold">I'M Kerri Deo.</span></h4>
                           -->
-                            <p class="text-muted mt-4">This project is my first attempt at implementing machine learning and artificial intelligence. Using Keras and TensorFlow, I created a model that could train on labelled data and correctly identify cats and dogs with an accuracy of more than 80%. </p>
+                            <p class="text-muted mt-4">This project, built using the OpenCV computer vision library, is able to conduct object detection for videos and images using YOLO. Using the pre-trained weights from the Darknet team, the model works very well and is quite accurate in identifying the classes it had trained on. </p>
                             <p class="text-muted mt-2">Check out the project and additional resources below:  </p>
 
                             <div>
@@ -153,18 +153,18 @@
                             <div class="col-lg-6 mt-3">
                                 <div class="rounded bg-white p-2">
                                     <div class="img_blog">
-                                      <a target="blank" href="https://towardsdatascience.com/cnns-explained-giving-sight-to-artificial-intelligence-304f252346bc">
-                                        <img src="images/CNNs/article.png" alt="" class="img-fluid rounded mx-auto d-block">
+                                      <a target="blank" href="https://towardsdatascience.com/real-time-object-detection-with-yolo-9dc039a2596b">
+                                        <img src="images/YOLO/article.png" alt="" class="img-fluid rounded mx-auto d-block">
                                       </a>
                                     </div>
                                     <div class="content_blog pt-3 pb-3">
                                         <div>
-                                            <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Teaching Computers To See: CNNs</a></h5>
+                                            <h5 class="font-weight-bold mb-0"><a href="https://towardsdatascience.com/real-time-object-detection-with-yolo-9dc039a2596b" class="text-dark">Real-Time Object Detection with YOLO</a></h5>
                                         </div>
                                         <div class="mt-3">
-                                            <p class="h6 text-muted date_blog mb-0">5 February 2020 <a target="blank" href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold">By Freeman</a></p>
-                                            <p class="mt-3 desc_blog text-muted">An article I wrote with an intuitive explanation of how convolutional neural networks allow computers to see.</p>
-                                            <p class="h6 mb-0"><a target="blank" href="https://towardsdatascience.com/cnns-explained-giving-sight-to-artificial-intelligence-304f252346bc" class="text-muted font-weight-bold">Read More...</a></p>
+                                            <p class="h6 text-muted date_blog mb-0">13 February 2020 <a target="blank" href="https://medium.com/@freeman.jiang" class="text-custom font-weight-bold">By Freeman</a></p>
+                                            <p class="mt-3 desc_blog text-muted">Exploring the ultra-fast computer vision algorithm in self-driving cars and autonomous drones capable of processing 155+ frames per second</p>
+                                            <p class="h6 mb-0"><a target="blank" href="https://towardsdatascience.com/real-time-object-detection-with-yolo-9dc039a2596b" class="text-muted font-weight-bold">Read More...</a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -175,18 +175,17 @@
                                   <div class="img_blog">
 
 
-                                      <iframe class="rounded" width="100%" height="295em" src="https://www.youtube.com/embed/ExknroSorec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                  <iframe class="rounded" width="100%" height="295em" src="https://www.youtube.com/embed/K0fWqR5I1yo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
                                   </div>
                                   <div class="content_blog pt-3 pb-3">
                                       <div>
-                                          <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Convolutional Neural Networks Explained</a></h5>
+                                          <h5 class="font-weight-bold mb-0"><a href="#" class="text-dark">Real-Time Object Detection with YOLO</a></h5>
                                       </div>
 
-                                      <p class="h6 text-muted date_blog mb-0">24 January 2020 <a target="blank"  href="https://www.youtube.com/channel/UC5zpPTU8-0v0JvrmIPut4IA" class="text-custom font-weight-bold">By Freeman</a></p>
-                                      <p class="mt-3 desc_blog text-muted">Video created explaining how the mechanics behind convolutional neural networks work. The video explains the convolutional layer, pooling layers, flattening, and training.</p>
-
+                                      <p class="h6 text-muted date_blog mb-0">16 February 2020 <a target="blank" href="https://www.youtube.com/channel/UC5zpPTU8-0v0JvrmIPut4IA" class="text-custom font-weight-bold">By Freeman</a></p>
+                                      <p class="mt-3 desc_blog text-muted">Video explaining the artificial intelligence behind Tesla's autopilot: YOLO Object Detection. The video explains bounding boxes, intersection over union, and more.</p>
                                   </div>
                                   </div>
                               </div>
@@ -250,6 +249,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!--
                 <div class="row mt-5">
                     <div class="col-lg-12">
