Added Style Transfer with GANs Project

--- a/index.html
+++ b/index.html
@@ -268,34 +268,6 @@
                       </a>
                   </div>
                 -->
-                <div class="col-lg-4 work_item">
-                    <a href="images/works/4.png" class="img-zoom">
-                        <div class="work_box">
-                            <div class="work_img">
-                                <img src="images/works/4.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                            </div>
-                            <div class="work_detail">
-                                <p class="mb-2">TKS x Raven Telemetry</p>
-                                <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/assets/RavenTelemetryDeck.pdf">AMI Launch Recommendation Deck</a></h4>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-lg-4 work_item">
-                    <a href="images/works/5.png" class="img-zoom">
-                        <div class="work_box">
-                            <div class="work_img">
-                                <img src="images/works/5.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                            </div>
-                            <div class="work_detail">
-                                <p class="mb-2">Academic Project</p>
-                                <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/cbdeca">Colonel By DECA Website</a></h4>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-
                 <div class="col-lg-4 work_item aifocus">
                     <a href="images/works/6.png" class="img-zoom">
                         <div class="work_box">
@@ -310,22 +282,9 @@
                     </a>
                 </div>
 
-                  </div>
 
-                <div class="row mt-4 work-filter">
-                  <div class="col-lg-4 work_item">
-                      <a href="images/works/2.jpg" class="img-zoom">
-                          <div class="work_box">
-                              <div class="work_img">
-                                  <img src="images/works/2.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
-                              </div>
-                              <div class="work_detail">
-                                  <p class="mb-2">SHAD Western 2019</p>
-                                  <h4 class="mb-0">Design Challenge: Electronic Waste Management Solution</h4>
-                              </div>
-                          </div>
-                      </a>
-                  </div>
+
+
 
                   <div class="col-lg-4 work_item aifocus">
                       <a href="images/works/7.jpg" class="img-zoom">
@@ -341,7 +300,67 @@
                       </a>
                   </div>
 
+                  <div class="col-lg-4 work_item aifocus">
+                      <a href="images/works/8.jpg" class="img-zoom">
+                          <div class="work_box">
+                              <div class="work_img">
+                                  <img src="images/works/8.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                              </div>
+                              <div class="work_detail">
+                                  <p class="mb-2">AI Focus</p>
+                                  <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/projects/AI/GANs.html">Style Transfer With GANs</a></h4>
+                              </div>
+                          </div>
+                      </a>
+                  </div>
 
+
+                </div>
+
+            <div class="row mt-4 work-filter">
+
+                              <div class="col-lg-4 work_item">
+                                  <a href="images/works/4.png" class="img-zoom">
+                                      <div class="work_box">
+                                          <div class="work_img">
+                                              <img src="images/works/4.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                                          </div>
+                                          <div class="work_detail">
+                                              <p class="mb-2">TKS x Raven Telemetry</p>
+                                              <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/assets/RavenTelemetryDeck.pdf">AMI Launch Recommendation Deck</a></h4>
+                                          </div>
+                                      </div>
+                                  </a>
+                              </div>
+
+                              <div class="col-lg-4 work_item">
+                                  <a href="images/works/5.png" class="img-zoom">
+                                      <div class="work_box">
+                                          <div class="work_img">
+                                              <img src="images/works/5.png" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                                          </div>
+                                          <div class="work_detail">
+                                              <p class="mb-2">Academic Project</p>
+                                              <h4 class="mb-0"><a class="none work" target="blank" href="https://freeman-jiang.github.io/cbdeca">Colonel By DECA Website</a></h4>
+                                          </div>
+                                      </div>
+                                  </a>
+                              </div>
+
+
+                                <div class="col-lg-4 work_item">
+                                    <a href="images/works/2.jpg" class="img-zoom">
+                                        <div class="work_box">
+                                            <div class="work_img">
+                                                <img src="images/works/2.jpg" class="img-fluid mx-auto d-block rounded" alt="work-img">
+                                            </div>
+                                            <div class="work_detail">
+                                                <p class="mb-2">SHAD Western 2019</p>
+                                                <h4 class="mb-0">Design Challenge: Electronic Waste Management Solution</h4>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
                   </div>
             </div>
 
