--- a/projects/AI/GANs.html
+++ b/projects/AI/GANs.html
@@ -126,14 +126,17 @@
                             <h4 class="mt-4">Hello! <span class="text-custom font-weight-bold">I'M Kerri Deo.</span></h4>
                           -->
                             <p class="text-muted mt-4">PyTorch implementation of image-image translation without using paired examples. Since there were no realistic photos to compare to most classical artworks, it was essential that Cycle GANs were used for the model's training.</p>
+                            <!--
                             <p class="text-muted mt-2">Check out the project and additional resources below:  </p>
 
                             <div>
                                 <ul class="mb-0 about-social list-inline mt-4">
                                     <li class="list-inline-item"><a href="https://github.com/freeman-jiang/basic-cat-dog-classifier"><i class="mdi mdi-github-circle"></i></a></li>
+                                    <li class="list-inline-item"><a href="https://arxiv.org/pdf/1406.2661.pdf"><i class="mdi mdi-action-assignment"></i></a></li>
 
                                 </ul>
                             </div>
+                          -->
                         </div>
                     </div>
                 </div>
