--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="description" content="Portfolio Website - Freeman Jiang" />
     <meta
       name="keywords"
-      content="Freeman Jiang, Freeman, Jiang, FreemanJiang, Full Stack Developer, Fullstack, Full-Stack Developer, Web Developer, University of Waterloo, Developer"
+      content="Freeman Jiang, Freeman, Jiang, FreemanJiang, Full Stack Developer, Fullstack, Full-Stack Developer, Web Developer, University of Waterloo, Software Engineer"
     />
+    <link rel="canonical" href="https://freemanjiang.com" />
+    <meta property="og:title" content="Freeman Jiang | Developer" />
+    <meta property="og:image" content="url('images/og-bg.png')" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="Portfolio Website - Freeman Jiang" />
 
     <link rel="shortcut icon" href="favicon.ico" />
 
@@ -107,6 +112,7 @@
                 Incoming first-year CS & BBA at the University of Waterloo
               </p>
               <div class="mt-4 pt-2 mtsr">
+                <!-- TODO: ADD RESUME -->
                 <a href="#" class="btn btn-outline-custom btn-round"
                   >Download Resume</a
                 >
