--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       content="Freeman Jiang, Freeman, Jiang, FreemanJiang, Full Stack Developer, Fullstack, Full-Stack Developer, Web Developer, University of Waterloo, Software Engineer"
     />
     <link rel="canonical" href="https://freemanjiang.com" />
+    <meta property="og:url" content="https://freemanjiang.com" />
     <meta property="og:title" content="Freeman Jiang | Developer" />
-    <meta property="og:image" content="url('images/og-bg.png')" />
+    <meta property="og:image" content="https://freemanjiang.com/images/og-bg.png" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Portfolio Website - Freeman Jiang" />
 
