--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <div>
                 <ul class="mb-0 about-social list-inline mt-4">
                   <li class="list-inline-item">
-                    <a target="blank" href="mailto:freeman.jiang.ca@gmail.com"
+                    <a target="blank" href="mailto:mail@freemanjiang.com"
                       ><i class="mdi mdi-email"></i
                     ></a>
                   </li>
@@ -793,7 +793,7 @@
                       </div>
                       <div class="mt-3">
                           <h5 class="mb-0 contact_detail-title font-weight-bold">Email</h5>
-                          <p class="text-muted">freeman.jiang.ca@gmail.com</p>
+                          <p class="text-muted">mail@freemanjiang.com</p>
                       </div>
                   </div>
               </div>
@@ -822,7 +822,7 @@
             <div class="text-center text-white footer-alt">
               <ul class="list-unstyled list-inline mb-0">
                 <li class="list-inline-item">
-                  <a target="blank" href="mailto:freeman.jiang.ca@gmail.com"
+                  <a target="blank" href="mailto:mail@freemanjiang.com"
                     ><i class="mdi mdi-email"></i
                   ></a>
                 </li>
