--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
                 Incoming first-year CS & BBA at the University of Waterloo
               </p>
               <div class="mt-4 pt-2 mtsr">
-                <!-- TODO: ADD RESUME -->
-                <a href="#" class="btn btn-outline-custom btn-round"
+                <a href="./assets/FreemanJiang.pdf" target="blank" class="btn btn-outline-custom btn-round"
                   >Download Resume</a
                 >
               </div>
