--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               </p>
               <p class="text-lighter mt-2">
                 I'm a full stack web developer with 2 years of experience
-                building customer-facing websites. I am most familiar with the
+                building responsive, customer-facing websites. I am most familiar with the
                 MERN or FERN stack, including React, Express, Node, and MongoDB
                 or Firebase.
               </p>
