Update education status

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="typed-text-body">I'm <span class="element fw-bold"></span></div>
               </h1>
               <p class="text-white mx-auto header-desc mt-4 mtsr">
-                Incoming first-year CS & BBA at the University of Waterloo
+                First-year CS & BBA at the University of Waterloo
               </p>
               <div class="mt-4 pt-2 mtsr">
                 <a href="./assets/FreemanJiang.pdf" target="blank" class="btn btn-outline-custom btn-round"
@@ -161,7 +161,7 @@
                 <span class="text-custom fw-bold">Freeman Jiang.</span>
               </h4>
               <p class="text-lighter mt-4">
-                I'm currently a rising freshman at the University of Waterloo in
+                I'm currently a first-year student at the University of Waterloo in
                 the Computer Science & Business Administration Double Degree
                 Program.
               </p>
