--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Freeman Jiang | Developer</title>
+    <title>Freeman Jiang | Portfolio Website</title>
     <meta name="description" content="Portfolio Website - Freeman Jiang" />
     <meta
       name="keywords"
