--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <div class="container" >
         <div class="row mt-4 work-filter" data-aos="fade-up">
         <!-- PORTFOLIO ITEM -->
-<div class="col-lg-4 work_item fullstack">
+<div class="col-lg-4 work_item frontend">
   <div class=" mt-3 rounded border">
       <div class="rounded bg-white">
         <div class="img_blog p-0 border-bottom rounded">
@@ -734,7 +734,7 @@
                   <p class="mt-3 desc_blog text-muted">
                     🔥 Future bass banger
                   </p>
-                  <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/text-me/1536247214?i=1536247215"></iframe>
+                  <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/text-me/1536247214?i=1536247215" alt="Turn cookies on"></iframe>
                   <a href="https://song.link/Rmbr6Z8fcNzZs" target="blank" class="text-custom fw-bold">See More...</a>
                 </div>
               </div>
@@ -763,7 +763,7 @@
                     ✨ Chainsmokers pop
                   </p>
                   
-                  <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/second-guessing/1584436904?i=1584436908"></iframe>
+                  <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/second-guessing/1584436904?i=1584436908"></iframe>
 
                   <p class="h6 mb-0">
                     <a href="https://song.link/x96mnjkvvw29w" target="blank" class="text-custom fw-bold">See More...</a>
@@ -794,7 +794,7 @@
                   <p class="mt-3 desc_blog text-muted">
                     ☕ Jazzy lo-fi beats 
                   </p>
-                  <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/stargazing/1532163918?i=1532163919"></iframe>
+                  <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/stargazing/1532163918?i=1532163919"></iframe>
                   <a href="https://song.link/7sbdd46gjnqcj" target="blank" class="text-custom fw-bold">See More...</a>
                 </div>
               </div>
