--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Freeman Jiang | Portfolio Website</title>
-    <meta name="description" content="Portfolio Website - Freeman Jiang" />
+    <meta name="description" content="Hi! I'm a first-year CS/BBA student at the University of Waterloo and a full stack developer with over 2 years of experience..." />
     <meta
       name="keywords"
       content="Freeman Jiang, Freeman, Jiang, FreemanJiang, Full Stack Developer, Fullstack, Full-Stack Developer, Web Developer, University of Waterloo, Software Engineer"
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Freeman Jiang | Developer" />
     <meta property="og:image" content="https://freemanjiang.com/images/og-bg.png" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Portfolio Website - Freeman Jiang" />
+    <meta property="og:description" content="Portfolio Website" />
 
     <link rel="shortcut icon" href="favicon.ico" />
 
