--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
               <a target="blank" href="https://hackthenorth.com/" class="text-custom fw-bold">Hack the North</a>
             </p>
             <p class="mt-3 desc_blog text-lighter fs-6 text">
-              Nom is a web app that reduces food waste by helping people find new recipes for everyday ingredients. It is built with a serverless approach using NextJS and powered by the <a href="https://spoonacular.com/food-api" target="blank" class="text-custom fw-bold">Spoonacular API</a>. Nom was built in 24h during Hack the North.
+              Nom is a web app that reduces food waste by helping people find new recipes for everyday ingredients. It is built with a serverless approach using NextJS and powered by the <a href="https://spoonacular.com/food-api" target="blank" class="text-custom fw-bold">Spoonacular API</a>. Nom was created in 24h during Hack the North.
               <p><strong>Technologies: </strong>NextJS, React, JavaScript, Chakra UI, Spoonacular API, Vercel, CSS</p>
             </p>
             <p class="h6 mb-0">
