--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="typed-text-body">I'm <span class="element fw-bold"></span></div>
               </h1>
               <p class="text-white mx-auto header-desc mt-4 mtsr">
-                First-year CS & BBA at the University of Waterloo
+                Studying Computer Science at the University of Waterloo
               </p>
               <div class="mt-4 pt-2 mtsr">
                 <a href="./assets/FreemanJiang.pdf" target="blank" class="btn btn-outline-custom btn-round"
@@ -157,23 +157,18 @@
             <div class="mt-3">
               <h2><span class="fw-bold">About</span> Me</h2>
               <h4 class="mt-4">
-                Hello! My name's
+                Hi! My name's
                 <span class="text-custom fw-bold">Freeman Jiang.</span>
               </h4>
               <p class="text-lighter mt-4">
-                I'm currently a first-year student at the University of Waterloo in
-                the Computer Science & Business Administration Double Degree
-                Program.
+                I'm currently a first-year computer science student at the University of Waterloo and a frontend developer for seed-stage startup <a href="https://www.getseeko.com/" class="text-custom fw-bold">Seeko</a>.
               </p>
               <p class="text-lighter mt-2">
-                I'm a full stack web developer with 2 years of experience
-                building responsive, customer-facing websites. I am most familiar with the
-                MERN or FERN stack, including React, Express, Node, and MongoDB
-                or Firebase.
+                I'm familiar with full stack development in the MERN stack (including React, Express, Node, MongoDB) and have recently picked up full stack Ethereum development as well.
               </p>
               <p class="text-lighter mt-2">
-                In my free time, I enjoy swimming, rock climbing, producing
-                electronic music, and attending hackathons.
+                In my free time, I enjoy reading, calisthenics, producing
+                electronic music, and building cool things.
               </p>
               
 
@@ -238,7 +233,7 @@
                 <h5 class="mb-0">Libraries & Platforms</h5>
                 <div class="services-title-border"></div>
                 <p class="text-lighter mt-3">
-                  React, Node, Express, NextJS, Bootstrap, Chakra UI, Bulma
+                  React, Node, Express, NextJS, Ethers.js, Chakra UI, Redux
                 </p>
               </div>
             </div>
@@ -252,7 +247,7 @@
                 <h5 class="mb-0">Programming Languages</h5>
                 <div class="services-title-border"></div>
                 <p class="text-lighter mt-3 pb-4">
-                  JavaScript, HTML, CSS, Bash, Python
+                  JavaScript/TypeScript, HTML, CSS, Solidity, Racket, C, Bash
                 </p>
               
               </div>
@@ -267,7 +262,7 @@
                 <h5 class="mb-0">Technologies</h5>
                 <div class="services-title-border"></div>
                 <p class="text-lighter mt-3">
-                  Firebase, MongoDB, Heroku, Vercel, Git, GitHub
+                  MongoDB, Firebase, GraphQL, Heroku, Vercel, Hardhat, Git, GitHub
                 </p>
               </div>
             </div>
@@ -295,7 +290,7 @@
                 <h5 class="mb-0">Tools</h5>
                 <div class="services-title-border"></div>
                 <p class="text-lighter mt-3">
-                  VS Code, Figma, Photoshop, Premiere Pro, Google Workspace,
+                  VSCode, Figma, Photoshop, Premiere Pro, Google Workspace,
                   Office 365
                 </p>
               </div>
@@ -364,16 +359,62 @@
               <a class="" data-filter=".frontend">Frontend</a>
             </li>
             <li class="list-inline-item">
-              <a class="" data-filter=".backend">Backend</a>
+              <a class="" data-filter=".fullstack">Full Stack</a>
             </li>
             <li class="list-inline-item">
-              <a class="" data-filter=".fullstack">Full Stack</a>
+              <a class="" data-filter=".web3">Web 3.0</a>
             </li>
           </ul>
         </div>
       </div>
       <div class="container" >
         <div class="row mt-4 work-filter" data-aos="fade-up">
+           <!-- PORTFOLIO ITEM -->
+<div class="col-lg-4 work_item frontend web3">
+  <div class=" mt-3 rounded border">
+      <div class="rounded bg-white">
+        <div class="img_blog p-0 border-bottom rounded">
+          <a href="images/portfolio/eth-rps.png" class="img-zoom">
+            <div class="work_box">
+              <div class="work_img">
+                <img
+                  src="images/portfolio/eth-rps.png"
+                  class="img-fluid mx-auto d-block rounded"
+                  alt="work-img"
+                />
+              </div>
+              <div class="work_detail">
+                <p class="mb-2">Personal Project</p>
+                <h4 class="mb-0">EthRPS</h4>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="content_blog p-3">
+            <h5 class="fw-bold mb-0">
+              <p class="text-dark">EthRPS</p>
+            </h5>
+          <div class="mt-3">
+            <p class="h6 text-lighter date_blog mb-0">
+              December 2021 | Personal Project
+            </p>
+            <p class="mt-3 desc_blog text-lighter fs-6 text">
+              EthRPS is a proof-of-concept decentralized rock paper scissors game that runs on the <a target="blank" href="https://ethereum.org/en/" class="text-custom fw-bold">Ethereum blockchain</a>. It uses a cryptographically secure commitment protocol to ensure fairness and is deployed to a test network on both L1 and L2.
+              <p><strong>Technologies: </strong>Solidity, Ethers.js, Hardhat, Infura, NextJS, React, Chakra UI, JavaScript</p>
+            </p>
+            <p class="h6 mb-0">
+              <div class="text-center mt-4">
+                <a  href="https://eth-rps.vercel.app/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                  <a href="https://github.com/freeman-jiang/eth-rps" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+                </div>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+<!-- END PORTFOLIO ITEM -->
+
         <!-- PORTFOLIO ITEM -->
 <div class="col-lg-4 work_item frontend">
   <div class=" mt-3 rounded border">
@@ -410,8 +451,9 @@
             </p>
             <p class="h6 mb-0">
               <div class="text-center mt-4">
-                  <a target="blank" href="https://github.com/freeman-jiang/hack-the-north-2021" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                </div>
+                <a  href="https://nom-htn2021.vercel.app/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                <a href="https://github.com/freeman-jiang/hack-the-north-2021" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+              </div>
             </p>
           </div>
         </div>
@@ -456,8 +498,9 @@
                       </p>
                       <p class="h6 mb-0">
                         <div class="text-center mt-4">
-                            <a target="blank" href="https://github.com/freeman-jiang/petlify" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                          </div>
+                          <a  href="https://petlify-b4a28.web.app/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                          <a href="https://github.com/freeman-jiang/petlify" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+                        </div>
                       </p>
                     </div>
                   </div>
@@ -467,7 +510,7 @@
         <!-- END PORTFOLIO ITEM -->
 
       <!-- PORTFOLIO ITEM -->
-      <div class="col-lg-4 work_item fullstack backend">
+      <div class="col-lg-4 work_item fullstack">
         <div class=" mt-3 rounded border">
             <div class="rounded bg-white">
               <div class="img_blog p-0 border-bottom rounded">
@@ -497,13 +540,14 @@
                     <a target="blank" href="https://fullstackopen.com/en/about/" class="text-custom fw-bold">Full Stack Open</a>
                   </p>
                   <p class="mt-3 desc_blog text-lighter fs-6 text">
-                    This project is part of a course on modern, JavaScript-based web development. It's an unstyled phonebook with search and CRUD functionality integrating frontend, backend, database, and deployment to the internet.
+                    An unstyled phonebook with search and CRUD functionality integrating frontend, backend, database. Deployed on Heroku.
                     <p><strong>Technologies: </strong>JavaScript, React, Node, Express, MongoDB, Mongoose, ESLint, Heroku, Git</p>
                   </p>
                   <p class="h6 mb-0">
                     <div class="text-center mt-4">
-                        <a target="blank" href="https://github.com/freeman-jiang/FSO-part-3" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                      </div>
+                      <a  href="https://tranquil-mesa-62190.herokuapp.com/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                      <a href="https://github.com/freeman-jiang/FSO-part-3" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+                    </div>
                   </p>
                 </div>
               </div>
@@ -548,8 +592,9 @@
             </p>
             <p class="h6 mb-0">
               <div class="text-center mt-4">
-                  <a target="blank" href="https://github.com/freeman-jiang/firenotes" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                </div>
+                <a  href="https://fire-notes-56420.web.app/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                <a href="https://github.com/freeman-jiang/firenotes" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+              </div>
             </p>
           </div>
         </div>
@@ -593,8 +638,9 @@
               </p>
               <p class="h6 mb-0">
                 <div class="text-center mt-4">
-                    <a target="blank" href="https://github.com/freeman-jiang/cb-virtual-concert" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                  </div>
+                  <a  href="https://freemanjiang.com/cb-virtual-concert/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                  <a href="https://github.com/freeman-jiang/cb-virtual-concert" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+                </div>
               </p>
             </div>
           </div>
@@ -639,8 +685,9 @@
             </p>
             <p class="h6 mb-0">
               <div class="text-center mt-4">
-                  <a target="blank" href="https://github.com/freeman-jiang/cb-deca" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                </div>
+                <a  href="https://freemanjiang.com/cb-deca/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                <a href="https://github.com/freeman-jiang/cb-deca" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+              </div>
             </p>
           </div>
         </div>
@@ -684,8 +731,9 @@
             </p>
             <p class="h6 mb-0">
               <div class="text-center mt-4">
-                  <a target="blank" href="https://github.com/freeman-jiang/Pomodoro-App" class="btn btn-sm btn-custom">Learn More <i class="mdi mdi-github-circle"></i></a>
-                </div>
+                <a  href="https://freemanjiang.com/Pomodoro-App/" class="btn btn-sm btn-custom" target="blank">View Project <i class="mdi mdi-arrow-right"></i></a>
+                <a href="https://github.com/freeman-jiang/Pomodoro-App" class="btn-sm btn-light mx-2" target="blank">More <i class="mdi mdi-github-circle"></i></a>
+              </div>
             </p>
           </div>
         </div>
@@ -948,7 +996,7 @@
           'Freeman Jiang.',
           'A Web Developer.',
           'A CS Student.',
-          'An Amateur Producer.',
+          'A Music Producer.',
         ],
         typeSpeed: 120,
         backSpeed: 60,
