--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="typed-text-body">I'm <span class="element fw-bold"></span></div>
               </h1>
               <p class="text-white mx-auto header-desc mt-4 mtsr">
-                Studying Computer Science at the University of Waterloo
+                1B Computer Science at the University of Waterloo
               </p>
               <div class="mt-4 pt-2 mtsr">
                 <a href="./assets/FreemanJiang.pdf" target="blank" class="btn btn-outline-custom btn-round"
