--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
                 I'm currently a first-year computer science student at the University of Waterloo and a frontend developer for seed-stage startup <a href="https://www.getseeko.com/" class="text-custom fw-bold">Seeko</a>.
               </p>
               <p class="text-lighter mt-2">
-                I'm familiar with full stack development in the MERN stack (including React, Express, Node, MongoDB) and have recently picked up full stack Ethereum development as well.
+                I'm familiar with full stack development in the MERN stack and have recently picked up full stack Ethereum development as well. My goal is to build things that will impact the world and learn skills that will compound over a lifetime 🚀
               </p>
               <p class="text-lighter mt-2">
-                In my free time, I enjoy reading, calisthenics, producing
-                electronic music, and building cool things.
+                In my free time, I enjoy reading, calisthenics, and producing
+                electronic music.
               </p>
               
 
