--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <span class="text-custom fw-bold">Freeman Jiang.</span>
               </h4>
               <p class="text-lighter mt-4">
-                I'm currently a first-year computer science student at the University of Waterloo and a frontend developer for seed-stage startup <a href="https://www.getseeko.com/" class="text-custom fw-bold">Seeko</a>.
+                I'm currently a first-year computer science student at the University of Waterloo and a frontend developer for pre-seed startup <a href="https://www.getseeko.com/" class="text-custom fw-bold">Seeko</a>.
               </p>
               <p class="text-lighter mt-2">
                 I'm familiar with full stack development in the MERN stack and have recently picked up full stack Ethereum development as well. My goal is to build things that will impact the world and learn skills that will compound over a lifetime 🚀
@@ -233,7 +233,7 @@
                 <h5 class="mb-0">Libraries & Platforms</h5>
                 <div class="services-title-border"></div>
                 <p class="text-lighter mt-3">
-                  React, Node, Express, NextJS, Ethers.js, Chakra UI, Redux
+                  React, Node, Express, Next.js, Ethers.js, Chakra UI, Redux
                 </p>
               </div>
             </div>
@@ -400,7 +400,7 @@
             </p>
             <p class="mt-3 desc_blog text-lighter fs-6 text">
               EthRPS is a proof-of-concept decentralized rock paper scissors game that runs on the <a target="blank" href="https://ethereum.org/en/" class="text-custom fw-bold">Ethereum blockchain</a>. It uses a cryptographically secure commitment protocol to ensure fairness and is deployed to a test network on both L1 and L2.
-              <p><strong>Technologies: </strong>Solidity, Ethers.js, Hardhat, Infura, NextJS, React, Chakra UI, JavaScript</p>
+              <p><strong>Technologies: </strong>Solidity, Ethers.js, Hardhat, Infura, Next.js, React, Chakra UI, JavaScript</p>
             </p>
             <p class="h6 mb-0">
               <div class="text-center mt-4">
@@ -446,8 +446,8 @@
               <a target="blank" href="https://hackthenorth.com/" class="text-custom fw-bold">Hack the North</a>
             </p>
             <p class="mt-3 desc_blog text-lighter fs-6 text">
-              Nom is a web app that reduces food waste by helping people find new recipes for everyday ingredients. It is built with a serverless approach using NextJS and powered by the <a href="https://spoonacular.com/food-api" target="blank" class="text-custom fw-bold">Spoonacular API</a>. Nom was created in 16h during Hack the North.
-              <p><strong>Technologies: </strong>NextJS, React, JavaScript, Chakra UI, Spoonacular API, Vercel, CSS</p>
+              Nom is a web app that reduces food waste by helping people find new recipes for everyday ingredients. It is built with a serverless approach using Next.js and powered by the <a href="https://spoonacular.com/food-api" target="blank" class="text-custom fw-bold">Spoonacular API</a>. Nom was created in 16h during Hack the North.
+              <p><strong>Technologies: </strong>Next.js, React, JavaScript, Chakra UI, Spoonacular API, Vercel, CSS</p>
             </p>
             <p class="h6 mb-0">
               <div class="text-center mt-4">
